--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <h1>this is new file that I will add in git</h1>
 </body>
 </html>
